--- a/index.html
+++ b/index.html
@@ -8,6 +8,59 @@
   <h1>Volunteer Form</h1>
   <form method="POST" action=" http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php"
     <fieldset>
-	<legend>My Info</legend>
+	<legend><strong>My Info</strong></legend>
+	  <div>
+	    <label>First Name: <input type="text" name="first_name_field"</label>
+	  </div>
+	  <div>
+	    <label>Last Name: <input type="text" name="last_name_field"</label>
+	  </div>
+	  <div>
+	    <label>Phone Number: <input type="text" name="phone_field"</label>
+	  </div>
+	  <div>
+	    <label>Email Address: <input type="text" name="email_field"</label>
+	  </div>
+	  <div>
+	    <label>Gender:</label>
+		<label for="Male">Male</label><input type="radio" name="gender_field" value="Male" id="Male">
+		<label for="Female">Female</label><input type="radio" name="gender_field" value="Female" id="Female">
+	  </div>
+	  <div>
+	    <label>Age:</label>
+		<select name="age_field">
+		  <option value="18-24">18-24</option>
+		  <option value="25-34">25-34</option>
+		  <option value="35-44">35-44</option>
+		  <option value="45-54">45-54</option>
+		  <option value="55-64">55-64</option>
+		  <option value="65 and over">65 and over</option>
+		</select>
+	  </div>
+	</fieldset>
+	<fieldset>
+	<legend><strong>My Availability</strong></legend>
+	  <div>
+	    <label>Days Available:</label>
+	  </div>
+	  <div>
+	    <label>Sunday <input type="checkbox" name=available_field[]" value="Sunday"></label><br>
+		<label>Monday <input type="checkbox" name=available_field[]" value="Monday"></label><br>
+		<label>Tuesday <input type="checkbox" name=available_field[]" value="Tuesday"></label><br>
+		<label>Wednesday <input type="checkbox" name=available_field[]" value="Wednesday"></label><br>
+		<label>Thursday <input type="checkbox" name=available_field[]" value="Thursday"></label><br>
+		<label>Friday <input type="checkbox" name=available_field[]" value="Friday"></label><br>
+		<label>Saturday <input type="checkbox" name=available_field[]" value="Saturday"></label><br>
+	  </div>
+	  <div>
+	    <label>Any Comments?</label>
+		<textarea name="comments_field"></textarea>
+	  </div>
+	</fieldset>
+	  <div>
+	    <input type="hidden" name="hidden_field" value="sslote2">
+	  </div>
+	    <input type="submit" value="Send Me">
+  </form>
 </body>
 </html>
