adding > and "under 18" option

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Volunteer Form</h1>
-  <form method="POST" action=" http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php"
+  <form method="POST" action=" http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php">
     <fieldset>
 	<legend><strong>My Info</strong></legend>
 	  <div>
@@ -29,6 +29,7 @@
 	  <div>
 	    <label>Age:</label>
 		<select name="age_field">
+		  <option value="under 18">under 18</option>
 		  <option value="18-24">18-24</option>
 		  <option value="25-34">25-34</option>
 		  <option value="35-44">35-44</option>
