adding section to comments

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<label>Saturday <input type="checkbox" name=available_field[]" value="Saturday"></label><br>
 	  </div>
 	  <div>
-	    <label>Any Comments?</label>
+	    <label>Any Comments?</label><br>
 		<textarea name="comments_field"></textarea>
 	  </div>
     </fieldset>
