--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <fieldset>
 	<legend><strong>My Info</strong></legend>
 	  <div>
-	    <label>First Name: <input type="text" name="first_name_field"</label>
+	    <label>First Name: <input type="text" name="first_name_field"></label>
 	  </div>
 	  <div>
-	    <label>Last Name: <input type="text" name="last_name_field"</label>
+	    <label>Last Name: <input type="text" name="last_name_field"></label>
 	  </div>
 	  <div>
-	    <label>Phone Number: <input type="text" name="phone_field"</label>
+	    <label>Phone Number: <input type="text" name="phone_field"></label>
 	  </div>
 	  <div>
-	    <label>Email Address: <input type="text" name="email_field"</label>
+	    <label>Email Address: <input type="text" name="email_field"></label>
 	  </div>
 	  <div>
 	    <label>Gender:</label>
