--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 	    <label>Days Available:</label>
 	  </div>
 	  <div>
-	    <label>Sunday <input type="checkbox" name=available_field[]" value="Sunday"></label><br>
-		<label>Monday <input type="checkbox" name=available_field[]" value="Monday"></label><br>
-		<label>Tuesday <input type="checkbox" name=available_field[]" value="Tuesday"></label><br>
-		<label>Wednesday <input type="checkbox" name=available_field[]" value="Wednesday"></label><br>
-		<label>Thursday <input type="checkbox" name=available_field[]" value="Thursday"></label><br>
-		<label>Friday <input type="checkbox" name=available_field[]" value="Friday"></label><br>
-		<label>Saturday <input type="checkbox" name=available_field[]" value="Saturday"></label><br>
+	    <label>Sunday <input type="checkbox" name="available_field[]" value="Sunday"></label><br>
+		<label>Monday <input type="checkbox" name="available_field[]" value="Monday"></label><br>
+		<label>Tuesday <input type="checkbox" name="available_field[]" value="Tuesday"></label><br>
+		<label>Wednesday <input type="checkbox" name="available_field[]" value="Wednesday"></label><br>
+		<label>Thursday <input type="checkbox" name="available_field[]" value="Thursday"></label><br>
+		<label>Friday <input type="checkbox" name="available_field[]" value="Friday"></label><br>
+		<label>Saturday <input type="checkbox" name="available_field[]" value="Saturday"></label><br>
 	  </div>
 	  <div>
 	    <label>Any Comments?</label><br>
